# webtrap

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: cli.rs  diff.rs  inspect.rs  lib.rs  main.rs  replay.rs  server.rs  stats.rs  storage.rs  types.rs  validate.rs
tests/: integration.rs
